--- a/phase_1/week_4/functions_methods_2/functions_methodsII_notes.ipynb
+++ b/phase_1/week_4/functions_methods_2/functions_methodsII_notes.ipynb
@@ -60,7 +60,7 @@
     "    continue\n",
     "  \n",
     "  # need to make a fix here\n",
-    "  f_capital = fname.capitalize()\n",
+    "  f_capital = fname.upper()\n",
     "  m_capital = \"\" if mname == \"NA\" else mname.capitalize()\n",
     "  l_capital = lname.capitalize()\n",
     "\n",
@@ -81,23 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def multiply(a, b):\n",
-    "  \"\"\"A function that multiplies a & b\n",
-    "\n",
-    "  Parameters\n",
-    "  ----------\n",
-    "  a:  int\n",
-    "    the first number to multiply\n",
-    "  b:  int\n",
-    "    the second number to multiply\n",
-    "\n",
-    "  Returns\n",
-    "  -------\n",
-    "  int\n",
-    "    an integer that represents the product of a & b\n",
-    "  \"\"\"\n",
-    "  return a * b\n",
-    "\n",
     "def get_names():\n",
     "  \"\"\"Take in 3 names from console\n",
     "  \n",
@@ -137,7 +120,7 @@
     "    return False\n",
     "\n",
     "  # the fix only happens here\n",
-    "  f_capital = first.upper()\n",
+    "  f_capital = first.capitalize()\n",
     "  m_capital = \"\" if middle == \"NA\" else middle.capitalize()\n",
     "  l_capital = last.capitalize()\n",
     "\n",
@@ -148,7 +131,7 @@
     "\n",
     "# Application:\n",
     "# A cli that collects census data\n",
-    "while True:\n",
+    "for i in range(5):\n",
     "  print(\"Enter your name\")\n",
     "  first, middle, last = get_names()\n",
     "  name = make_name(first, middle, last)\n",
