--- a/phase_1/week_4/functions_methods_2/functions_methodsII_task.ipynb
+++ b/phase_1/week_4/functions_methods_2/functions_methodsII_task.ipynb
@@ -74,9 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95.33333333333333\n"
+     ]
+    }
+   ],
    "source": [
     "x = 100\n",
     "y = 100\n",
@@ -100,9 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def a(x, y, z):\n",
     "     if x:\n",
@@ -111,7 +130,11 @@
     "         return z\n",
     "\n",
     "def b(q, r):\n",
-    "    return a(q>r, q, r)"
+    "    return a(q>r, q, r)\n",
+    "\n",
+    "\n",
+    "a(False, 2, 3)\n",
+    "b(3, 2)"
    ]
   },
   {
@@ -187,7 +210,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
