Added oop notes

--- a/phase_1/week_4/lab/functions_review_lab.ipynb
+++ b/phase_1/week_4/lab/functions_review_lab.ipynb
@@ -17,23 +17,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "csv\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_extension(x):\n",
-    "    \"\"\"[put description here]\n",
+    "def get_extension(x): \n",
+    "    \"\"\"A function that returns the file extension.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    [put parameter here]\n",
+    "    x:  str\n",
+    "        A file name that contains an extension.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    [put return value here]\n",
+    "    str\n",
+    "        The file extension\n",
     "    \"\"\"\n",
-    "    # write solution here\n",
-    "    "
+    "    lst = x.split(\".\")\n",
+    "    return lst[1]\n",
+    "\n",
+    "result = get_extension(\"test.csv\")\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_extension(x): \n",
+    "    \"\"\"A function that returns the file extension.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x:  str\n",
+    "        A file name that contains an extension.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        The file extension\n",
+    "    \"\"\"\n",
+    "    dot_index = x.find(\".\")\n",
+    "    return x[dot_index + 1:]\n",
+    "\n",
+    "result = get_extension(\"test.csv\")\n",
+    "print(result)"
    ]
   },
   {
@@ -143,7 +190,7 @@
    "source": [
     "## List Printer\n",
     "\n",
-    "Create a function called `print_list(lst)` that takes in a list as an argument, and prints out all the integers of this list.\n",
+    "Create a function called `print_list(lst)` that takes in a list as an argument, and prints out all the values of this list.\n",
     "\n",
     "This function does not have to return anything"
    ]
@@ -227,7 +274,7 @@
     "    digits = (1, 2, 3, 4, 5, 6, 7, 8, 9)\n",
     "    return\n",
     "\n",
-    "remove_nums(\"d357a@@ta.csv\")"
+    "remove_nums(\"d357ata.csv\")"
    ]
   }
  ],
@@ -238,7 +285,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
