--- a/phase_1/week_4/lab/functions_review_notes.ipynb
+++ b/phase_1/week_4/lab/functions_review_notes.ipynb
@@ -24,17 +24,19 @@
    "outputs": [],
    "source": [
     "def fix_file(file):\n",
-    "    \"\"\"[put description here]\n",
+    "    \"\"\"A function that removes whitespaces from a string.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    [put parameter here]\n",
+    "    file:   str\n",
+    "        A string that represents a filename\n",
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    [put return value here]\n",
+    "    str\n",
+    "        A string of the filename with all whitespaces removed\n",
     "    \"\"\"\n",
-    "    # put code here\n"
+    "    return file.replace(\" \", \"\")\n"
    ]
   },
   {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -257,8 +259,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_1\\week_4\\lab\\functions_review_notes.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 23>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m fix_file(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# problem\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m fix_file(\u001b[39m10\u001b[39;49m)\n",
-      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_1\\week_4\\lab\\functions_review_notes.ipynb Cell 12\u001b[0m in \u001b[0;36mfix_file\u001b[1;34m(file)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfix_file\u001b[39m(file):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\"\"A function to remove whitespaces in your file.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m        A string with the corrected filename.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m file\u001b[39m.\u001b[39;49mreplace(\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_1\\week_4\\lab\\functions_review_notes.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 23>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m fix_file(\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# problem\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m fix_file(\u001b[39m10\u001b[39;49m)\n",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_1\\week_4\\lab\\functions_review_notes.ipynb Cell 14\u001b[0m in \u001b[0;36mfix_file\u001b[1;34m(file)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfix_file\u001b[39m(file):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m\"\"\"A function to remove whitespaces in your file.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m        A string with the corrected filename.\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_4/lab/functions_review_notes.ipynb#X42sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m file\u001b[39m.\u001b[39;49mreplace(\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'replace'"
      ]
     }
@@ -457,13 +459,14 @@
     "\n",
     "    Returns\n",
     "    -------\n",
-    "    str | None\n",
-    "        A string that represents the file-type. None if \n",
+    "    str | -1\n",
+    "        A string that represents the file-type. -1 if \n",
     "        the string is not a valid file.\n",
     "    \"\"\"\n",
     "    dot_ind = file.find(\".\")\n",
     "    if dot_ind == -1:\n",
-    "        return None\n",
+    "        print(\"your file name was not good\")\n",
+    "        return -1\n",
     "    extension = file[dot_ind + 1:]\n",
     "    return extension\n",
     "\n",
@@ -488,14 +491,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".csv\n"
+     ]
+    }
+   ],
    "source": [
     "import pathlib\n",
     "\n",
-    "for f in files:\n",
-    "    result = pathlib.Path(f).suffix\n",
+    "result = pathlib.Path(\"test.csv\")\n",
+    "print(result.suffix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".csv\n",
+      "test.csv\n",
+      ".csv\n",
+      "data.csv\n",
+      ".txt\n",
+      "data.txt\n",
+      ".py\n",
+      "functions.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pathlib\n",
+    "\n",
+    "files = [\"test.csv\", \"data.csv\", \"data.txt\", \"functions.py\"]\n",
+    "\n",
+    "for foo in files:\n",
+    "    result = pathlib.Path(foo)\n",
+    "    print(result.suffix)\n",
     "    print(result)"
    ]
   }
