--- a/phase_1/week_4/lab/functions_review_lab.ipynb
+++ b/phase_1/week_4/lab/functions_review_lab.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,30 @@
     "\n",
     "result = get_extension(\"test.csv\")\n",
     "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This', 'product', 'was', 'great!', 'It', 'came', 'quickly', 'and', 'worked', 'as', 'expected']\n"
+     ]
+    }
+   ],
+   "source": [
+    "review = \"This product was great! It came quickly and worked as expected\"\n",
+    "lst = review.split()\n",
+    "print(lst)\n",
+    "\n",
+    "positive = 0\n",
+    "negative = 0\n",
+    "if \"great\" in lst:\n",
+    "    positive += 1"
    ]
   },
   {
@@ -256,9 +280,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data.csv'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def remove_nums(filename):\n",
     "    \"\"\"[put description here]\n",
@@ -271,10 +306,14 @@
     "    -------\n",
     "    [put return value here]\n",
     "    \"\"\"\n",
-    "    digits = (1, 2, 3, 4, 5, 6, 7, 8, 9)\n",
-    "    return\n",
+    "    digits = (\"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\")\n",
+    "    temp = filename\n",
+    "    for d in digits:\n",
+    "        if d in filename:\n",
+    "            temp = temp.replace(d, \"\")\n",
+    "    return temp\n",
     "\n",
-    "remove_nums(\"d357ata.csv\")"
+    "remove_nums(\"d357a@@ta.csv\")"
    ]
   }
  ],
