Added oop notes

--- a/phase_1/week_5/oop/oop_notes.ipynb
+++ b/phase_1/week_5/oop/oop_notes.ipynb
@@ -334,6 +334,11 @@
     "\n",
     "We've actually already have been interacting with objects all this time. Remember our strings? These are objects that have methods and variables attached to them. \n",
     "\n",
+    "Each of these objects have:\n",
+    "* a type\n",
+    "* internal data representation (called instance variables)\n",
+    "* set of procedures (called instance method)\n",
+    "\n",
     "The documentation of strings will reveal the same. Here we see our list of methods that come attached with every single string object: https://docs.python.org/3/library/stdtypes.html#string-methods.\n",
     "\n",
     "Since we don't really need any variables that we need to access from our string, we do not have instance varaibles in this case."
@@ -410,6 +415,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## More Builtin Objects\n",
+    "\n",
+    "Keep in mind, objects are just clumps of data & variables joined together for our own utility. \n",
+    "\n",
+    "Since we are interested in data analysis, let's get to know a few core modules that will allow us to do the most basic of data-processing, reading & outputting.\n",
+    "\n",
+    "For this we must utilize the the objects that come with `csv` and `pathlib`.\n",
+    "\n",
+    "We will go over these useful objects tomorrow when it comes to reading & writing data, but for now feel free to explore this documentation:\n",
+    "\n",
+    "* https://docs.python.org/3/library/csv.html \n",
+    "* https://docs.python.org/3/library/pathlib.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Primitives\n",
     "\n",
     "In other programming lanugage, these \"simple\" data-types would be treated as something we call a primitive.\n",
@@ -451,22 +474,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating your own Object\n",
+    "## Creating an object\n",
     "\n",
-    "Just like before, we won't always find ourselves using objects or functions that some other programmer wrote. Sometimes we will have to create our own objects for the sake of reusbility.\n",
+    "To create an object that is not a builtin Python datatype, we almost always follow this format:\n",
     "\n",
-    "Say you have just created a data pipeline that contains a whole bunch of methods used for processing your data.\n",
+    "```\n",
+    "varName = class()\n",
+    "```\n",
     "\n",
-    "Say you realize that some of these functions are used for one portion of the pipeline, and the other portion is used for a completely different part of our processing. Maybe it would be a good idea to seperate these out into objects"
+    "Specifically we do the following:\n",
+    "\n",
+    "1. we name the object (just like we do for variables)\n",
+    "2. We set the object equal to the class name followed by paranthesis. Usually there will be some argument passed into the paranthesis as well, just like functions.\n",
+    "\n",
+    "We see this present in the following lines of code where we are creating builtin objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from csv import reader\n",
+    "import pathlib\n",
+    "\n",
+    "# name = class()\n",
+    "spamreader = reader(\"testfile.csv\")\n",
+    "# name = class()\n",
+    "p = Path('.')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classes vs. Objects\n",
+    "## Creating your own Class\n",
     "\n",
-    "Firstly we will have to make a Python class, which is our blueprint for our Python object. Once we've implemented this class, we can then create an object using this class.\n",
+    "Just like before, we won't always find ourselves using objects or functions that some other programmer wrote. Sometimes we will have to create our own objects for the sake of reusbility.\n",
+    "\n",
+    "Say you have just created a data pipeline that contains a whole bunch of methods used for processing your data.\n",
+    "\n",
+    "Say you realize that some of these functions are used for one portion of the pipeline, and the other portion is used for a completely different part of our processing. Maybe it would be a good idea to seperate these out into objects.\n",
+    "\n",
+    "https://docs.python.org/3/tutorial/classes.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Class\n",
     "\n",
     "We start off with the `class` keyword. By principle, we always capitalize our class name.\n",
     "\n",
@@ -482,7 +540,11 @@
     "    \"\"\"\n",
     "```\n",
     "\n",
-    "We then implement something called the `__init__` method. Inside of the parameter list we include the `self` keyword, which is necessary to tie functions to our classes. This parameter list of the `__init__` method is what we will use to assign arguments to our instance variables.\n",
+    "We then implement something called the `__init__` method. This is our object [constructor](https://www.geeksforgeeks.org/constructors-in-python/), and this is what creates the actual object from the class definition. \n",
+    "\n",
+    "We also use this `__init__` method to create parameters that will act as our `instance variables`.\n",
+    "\n",
+    "Inside of the parameter list we include the `self` keyword, which is necessary to tie functions to our classes. This parameter list of the `__init__` method is what we will use to assign arguments to our instance variables.\n",
     "\n",
     "```\n",
     "class Name:\n",
@@ -502,7 +564,7 @@
     "\n",
     "We want to create an object that processes and transforms a list of filenames. We want to make this an object because we want to associate many methods to this operation, and we also want to save some easily accessible and named instance variables.\n",
     "\n",
-    "Feel free to notice the structure of the docstring as well. Once again however, it is not the focus."
+    "Feel free to notice the structure of the docstring as well. We will go over how this differs from a function docstring."
    ]
   },
   {
@@ -512,7 +574,7 @@
    "outputs": [],
    "source": [
     "class FileTransformer:\n",
-    "    \"\"\"Class\n",
+    "    \"\"\"Class to transform files properly\n",
     "\n",
     "    Instance Variables\n",
     "    ------------------\n",
@@ -531,57 +593,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we are creating a class called `FileTransformer`. Here, we are preparing to pass in a list of files as documented in the docstring, and as specified in the `__init__` method. Notice how we place the parameter called `files` after self.\n",
+    "\n",
+    "Furthermore, we create an instance variable called `files` and assign it to the parameter that is passed in.\n",
+    "\n",
+    "How do we distinguish between the parameter `files` and the instance variable `files`? We actually bring back that `self` keyword which tells Python that we are assigning this argument to the instance variable that belongs to this class."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adding Functions\n",
+    "\n",
+    "Now that we have our class definition, and our constructor called `__init__`, we can also add in `instance methods` that will interact with our `instance variables`.\n",
+    "\n",
+    "Note that we do not need to give a full docstring for non-public methods. Also keep in mind that any variable or any method that we create inside this class will once again only work within this class.\n",
+    "\n",
+    "Think of this as an even more powerful function."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FileTransformer:\n",
+    "    \"\"\"Class to transform files properly\n",
+    "\n",
+    "    Instance Variables\n",
+    "    ------------------\n",
+    "    files:  list()\n",
+    "            List that contains filenames.\n",
+    "\n",
+    "    Public Methods\n",
+    "    ----------\n",
+    "    fix_names(self):\n",
+    "        Function to remove all non-alphabet characters from this list. Returns a new list.\n",
+    "    extension_count(self):\n",
+    "        Function to count how many types of files we have. Returns an int\n",
+    "    \"\"\"\n",
+    "    def __init__(self, files):\n",
+    "        self.files = files\n",
+    "    \n",
+    "    def fix_names(self):\n",
+    "        \"\"\"A function to remove all non-alpha chars from self.files\"\"\"\n",
+    "        return\n",
+    "    \n",
+    "    def extension_count(self, extension):\n",
+    "        \"\"\"A function to count files of a certain extension\"\"\"\n",
+    "        # make a new list that only contains file extensions\n",
+    "        extensions = []\n",
+    "        for f in self.files:\n",
+    "            dot_index = f.find(\".\")\n",
+    "            result = f[dot_index + 1:]\n",
+    "            extensions.append(result)\n",
+    "        \n",
+    "        # count how many times this extension appears\n",
+    "        return extensions.count(extension)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes vs. Objects\n",
+    "\n",
+    "A Python class is our blueprint for our Python object. Once we've implemented this class, we can then create an object.\n",
+    "\n",
+    "We usually put classes in a seperate file and sometimes even group them together with similar classes. We then import these classes via the `import` statement.\n",
+    "\n",
+    "Keep in mind that the `object` is the actual bundle of data that you've created, while the `class` are all those variables and definitions that you've specified in a seperate file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on FileTransformer in module __main__ object:\n",
-      "\n",
-      "class FileTransformer(builtins.object)\n",
-      " |  FileTransformer(files)\n",
-      " |  \n",
-      " |  Class\n",
-      " |  \n",
-      " |  Instance Variables\n",
-      " |  ------------------\n",
-      " |  files:  list()\n",
-      " |          List that contains filenames.\n",
-      " |  \n",
-      " |  Public Methods\n",
-      " |  ----------\n",
-      " |  fix(self):\n",
-      " |      Function to remove all non-alphabet characters from this list. Returns a new list.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, files)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
+      "[]\n",
+      "0\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "test = FileTransformer([])\n",
-    "help(test)"
+    "# here we are creating a FileTransformer object that we created above\n",
+    "\n",
+    "# empty object (no data)\n",
+    "empty = FileTransformer([])\n",
+    "\n",
+    "# access object instance var (note we usually do not want to encourage this)\n",
+    "print(empty.files)\n",
+    "# run instance methods\n",
+    "print(empty.extension_count(\"py\"))\n",
+    "\n",
+    "# test object (some data)\n",
+    "test = FileTransformer([\"hello.py\", \"goodbye.txt\", \"data.csv\"])\n",
+    "\n",
+    "# run instance methods\n",
+    "print(test.extension_count(\"py\"))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Class DocString\n",
+    "\n",
+    "Notice that we did not need to write up a docstring for our non-public methods. This is the norm, as the class docstring will take care of describing all instance variables and function purpose.\n",
+    "\n",
+    "The format for a class docstring is as follows:\n",
+    "\n",
+    "```\n",
+    "    \"\"\"[class description]\n",
+    "\n",
+    "    Instance Variables\n",
+    "    ------------------\n",
+    "    [variable]:  [type]\n",
+    "            [variable description]\n",
+    "\n",
+    "    Public Methods\n",
+    "    ----------\n",
+    "    [method name]\n",
+    "        [method description]\n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "Just like with functions, this goes immediately underneath our definition.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overriding Functions\n",
+    "\n",
+    "We want to be able to compare and check for equality in our objects, so we could also implement the following methods to \"override\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FileTransformer:\n",
+    "    \"\"\"Class to transform files properly\n",
+    "\n",
+    "    Instance Variables\n",
+    "    ------------------\n",
+    "    files:  list()\n",
+    "            List that contains filenames.\n",
+    "\n",
+    "    Public Methods\n",
+    "    ----------\n",
+    "    fix_names(self):\n",
+    "        Function to remove all non-alphabet characters from this list. Returns a new list.\n",
+    "    extension_count(self):\n",
+    "        Function to count how many types of files we have. Returns an int\n",
+    "    \"\"\"\n",
+    "    def __init__(self, files):\n",
+    "        self.files = files\n",
+    "    \n",
+    "    def fix_names(self):\n",
+    "        \"\"\"A function to remove all non-alpha chars from self.files\"\"\"\n",
+    "        return\n",
+    "    \n",
+    "    def extension_count(self, extension):\n",
+    "        \"\"\"A function to count files of a certain extension\"\"\"\n",
+    "        # make a new list that only contains file extensions\n",
+    "        extensions = []\n",
+    "        for f in self.files:\n",
+    "            dot_index = f.find(\".\")\n",
+    "            result = f[dot_index + 1:]\n",
+    "            extensions.append(result)\n",
+    "        \n",
+    "        # count how many times this extension appears\n",
+    "        return extensions.count(extension)\n",
+    "\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return str(self.files)\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.files == other\n"
+   ]
   }
  ],
  "metadata": {
