Added notes, lab, and challenge

--- a/phase_1/week_5/oop/oop_task.ipynb
+++ b/phase_1/week_5/oop/oop_task.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,9 @@
     "        Function to get positive and negative score of paragraph.\n",
     "    \"\"\"\n",
     "    ## Q3 Modify the __init__ method to take in the \"parag\" param\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, parag):\n",
     "        ## Q4 Write the correct line of code to save \"parag\" as an instance variable (remove pass)\n",
-    "        pass\n",
+    "        self.parag = parag\n",
     "    \n",
     "    def get_sentiment(self):\n",
     "        positives = {\"great\", \"good\", \"wonderful\", \"excellent\", \"happy\"}\n",
@@ -90,7 +90,7 @@
     "        neg_score = 0\n",
     "\n",
     "        ## Q5 Modify this function so that we are using the instance variable `self.parag` instead of `parag`\n",
-    "        for word in parag:\n",
+    "        for word in self.parag.split():\n",
     "            if word in positives:\n",
     "                pos_score += 1\n",
     "            elif word in negatives:\n",
@@ -102,9 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This was a negative review.\n"
+     ]
+    }
+   ],
    "source": [
     "## Do not modify code below!!!\n",
     "\n",
@@ -158,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Statistics:\n",
-    "    \"\"\"Class to figure out a piece of text is positive or negative.\n",
+    "    \"\"\"Class to compute statistics on list of nums\n",
     "\n",
     "    Instance Variables\n",
     "    ------------------\n",
@@ -179,23 +187,51 @@
     "    get_min(self):\n",
     "        Get min of this list of numbers\n",
     "    \"\"\"\n",
-    "    pass\n",
-    "   \n",
-    "\n"
+    "    def __init__(self, nums):\n",
+    "        self.nums = nums\n",
+    "    \n",
+    "    def get_mean(self):\n",
+    "        result = sum(self.nums) / len(self.nums)\n",
+    "        return result\n",
+    "    \n",
+    "    def get_max(self):\n",
+    "        return max(self.nums)\n",
+    "\n",
+    "    def get_min(self):\n",
+    "        return min(self.nums)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Statistics' object has no attribute 'get_max'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\saidmf\\Desktop\\TKH\\DS_22\\phase_1\\week_5\\oop\\oop_task.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_5/oop/oop_task.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m test \u001b[39m=\u001b[39m Statistics([\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m8\u001b[39m,\u001b[39m9\u001b[39m,\u001b[39m10\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_5/oop/oop_task.ipynb#X23sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(test\u001b[39m.\u001b[39mget_mean())\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/saidmf/Desktop/TKH/DS_22/phase_1/week_5/oop/oop_task.ipynb#X23sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(test\u001b[39m.\u001b[39;49mget_max())\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Statistics' object has no attribute 'get_max'"
+     ]
+    }
+   ],
    "source": [
     "## This code is purely for testing. Do not modify\n",
     "\n",
     "test = Statistics([1,2,3,4,5,6,7,8,9,10])\n",
     "print(test.get_mean())\n",
     "print(test.get_max())\n",
-    "print(test.get_min())"
+    "#print(test.get_min())"
    ]
   }
  ],
@@ -206,7 +242,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
