added correction to oop

--- a/phase_1/week_6/oop_2/oop_2_notes.ipynb
+++ b/phase_1/week_6/oop_2/oop_2_notes.ipynb
@@ -42,26 +42,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Account balance: 850.33\n",
+      "Account balance: 650.33\n",
+      "Account balance: 850.33\n",
+      "Account balance: 1150.33\n",
+      "Account balance: 850.33\n",
+      "Not recognized. Try again.\n",
+      "Account balance: 1150.33\n"
+     ]
+    }
+   ],
    "source": [
     "balance = 850.33\n",
+    "# create the decision variable to be nothing at first\n",
+    "decision = \"\"\n",
+    "while decision != \"Exit\":\n",
+    "    print(\"Account balance:\", balance)\n",
     "\n",
-    "print(\"Account balance:\", balance)\n",
+    "    decision = input(\"What would you like to do? Type (W) for withdraw or (D) for deposit, (E) for exit.\")\n",
+    "    decision = decision.upper()\n",
+    "    if decision == \"W\":\n",
+    "        withdraw = float(input(\"How much would you like to withdraw?\"))\n",
+    "        if withdraw > balance:\n",
+    "            print(\"Error. Insufficient Funds.\")\n",
+    "            continue\n",
+    "        balance = balance - withdraw\n",
+    "    elif decision == \"D\":\n",
+    "        deposit = float(input(\"How much would you like to deposit?\"))\n",
+    "        balance = balance + deposit\n",
+    "    else:\n",
+    "        print(\"Not recognized. Try again.\")\n",
     "\n",
-    "decision = input(\"What would you like to do? Type (W) for withdraw or (D) for deposit.\")\n",
-    "decision = decision.upper()\n",
-    "if decision == \"W\":\n",
-    "    withdraw = float(input(\"How much would you like to withdraw?\"))\n",
-    "    new_balance = balance - withdraw\n",
-    "elif decision == \"D\":\n",
-    "    deposit = float(input(\"How much would you like to deposit?\"))\n",
-    "    new_balance = balance + deposit\n",
-    "else:\n",
-    "    print(\"Not recognized. Try again.\")\n",
-    "\n",
-    "print(\"Account balance:\", new_balance)"
+    "    print(\"Account balance:\", balance)"
    ]
   },
   {
@@ -554,7 +573,7 @@
     "\t\"\"\"\n",
     "    def __init__(self, name, track, familiars, hours):\n",
     "\t\t# call super constructor, type cast as super class and init\n",
-    "        super(Staff, self).__init__(name, track, familiars)\n",
+    "        super().__init__(name, track, familiars)\n",
     "        self.hours = hours\n",
     "\n",
     "test = Staff(\"rob\", \"DS\", [], \"8:00 - 10:00\")\n",
