Added phase1 proj

--- a/phase_1/week_6/oop_2/oop_2_task.ipynb
+++ b/phase_1/week_6/oop_2/oop_2_task.ipynb
@@ -92,17 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "GOOG = [\"99.57\", 98.71, 98.05, 98.30, \"99.71\"]\n",
     "AAPL = [140.09, 140.42, 138.98, 138.34, 142.99]\n",
     "COUR = [11.33, \"11.36\", 11.51, 11.73, None]\n",
     "GME = [\"None\", None, 25.27, 25.36, 25.56]\n",
-    "AMC = [6.53, 6.35, 6.12, 5.85, 6.04]\n",
-    "\n",
-    "# write solution here"
+    "AMC = [6.53, 6.35, 6.12, 5.85, 6.04]\n"
    ]
   },
   {
@@ -142,9 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "GOOG = [\"99.57\", 98.71, 98.05, 98.30, \"99.71\"]\n",
     "AAPL = [140.09, 140.42, 138.98, 138.34, 142.99]\n",
@@ -152,7 +171,7 @@
     "GME = [\"None\", None, 25.27, 25.36, 25.56]\n",
     "AMC = [6.53, 6.35, 6.12, 5.85, 6.04]\n",
     "\n",
-    "# write solution here"
+    "\n"
    ]
   },
   {
@@ -166,17 +185,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "GOOG = [\"99.57\", 98.71, 98.05, 98.30, \"99.71\"]\n",
     "AAPL = [140.09, 140.42, 138.98, 138.34, 142.99]\n",
     "COUR = [11.33, \"11.36\", 11.51, 11.73, None]\n",
     "GME = [\"None\", None, 25.27, 25.36, 25.56]\n",
-    "AMC = [6.53, 6.35, 6.12, 5.85, 6.04]\n",
-    "\n",
-    "# write solution here"
+    "AMC = [6.53, 6.35, 6.12, 5.85, 6.04]\n"
    ]
   },
   {
@@ -234,8 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write class here\n",
-    "\n"
+    "# write class here"
    ]
   },
   {
