Added oop_ds_review notes

--- a/phase_1/week_6/lab/oop_ds_review_notes.ipynb
+++ b/phase_1/week_6/lab/oop_ds_review_notes.ipynb
@@ -6,7 +6,138 @@
    "source": [
     "## Review\n",
     "\n",
-    "I have a list"
+    "I have two dictionaries describing the annual cost for rent in NYC for the years 2005 and 2019. Each dictionary is a seperate year, and the keys of the dictionary are the following: `median`, `average`, and `us-average`.\n",
+    "\n",
+    "How can I calculate the rate of change in average cost from 2005 to 2019 for nyc rent? How can I calculate rate of change for us average?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_2005 = {\"median\": 1051, \"average\": 1129, \"us-average\": 910}\n",
+    "year_2019 = {\"median\": 1309, \"average\": 1390, \"us-average\": 1097}\n",
+    "\n",
+    "# write solution here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution\n",
+    "\n",
+    "Below is the solution to this prompt.\n",
+    "\n",
+    "We want to be able to apply the \"slope formula\" to the average cost of rent in 2019 and 2005. We accomplish this by accessing the average \"value\" of 2019 by writing out `year_2019[\"average\"]`. The same applies to the average value of the year 2005: `year_2005[\"average\"]`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.642857142857142"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rate = (year_2019[\"average\"] - year_2005[\"average\"])/(2019 - 2005)\n",
+    "rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do the same exact line of code, except with the `us-average` key to calculate the average rate of change for the US."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.357142857142858"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rate = (year_2019[\"us-average\"] - year_2005[\"us-average\"])/(2019 - 2005)\n",
+    "rate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OOP in Data Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Signature Practice\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Signature:\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    def __init__(self, filepath, sig):\n",
+    "        self.filepath = filepath\n",
+    "        self.sig = sig\n",
+    "    \n",
+    "    def add_sig(self):\n",
+    "        with open(self.filepath, \"a\") as f:\n",
+    "            f.write(self.sig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sig = \"\"\"\n",
+    "PHONE: 555-555-5555\n",
+    "EMAIL: BOB@bob.com\n",
+    "\"The best time to plant a tree was \n",
+    "20 years ago, the second best time\n",
+    "is now.\" - Bob\"\"\"\n",
+    "\n",
+    "test = Signature(\"data/email.txt\", sig)\n",
+    "test.add_sig()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GitHub\n",
+    "\n"
    ]
   }
  ],
@@ -17,7 +148,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
