--- a/phase_1/week_6/lab/oop_ds_review_notes.ipynb
+++ b/phase_1/week_6/lab/oop_ds_review_notes.ipynb
@@ -99,25 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Signature:\n",
+    "def add_sig(filepath, sig):\n",
+    "    \"\"\"A function to add on a signature to some file\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    filepath : str\n",
+    "        a string to the file we are modifying\n",
+    "    sig : str\n",
+    "        a string signature\n",
     "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    def __init__(self, filepath, sig):\n",
-    "        self.filepath = filepath\n",
-    "        self.sig = sig\n",
-    "    \n",
-    "    def add_sig(self):\n",
-    "        with open(self.filepath, \"a\") as f:\n",
-    "            f.write(self.sig)"
+    "    with open(filepath, \"a\") as f:\n",
+    "        f.write(sig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +132,89 @@
     "\n",
     "test = Signature(\"data/email.txt\", sig)\n",
     "test.add_sig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Signature:\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    def __init__(self, filepath, sig):\n",
+    "        self.filepath = filepath\n",
+    "        self.sig = sig\n",
+    "    \n",
+    "    def add_sig(self):\n",
+    "        with open(self.filepath, \"a\") as f:\n",
+    "            f.write(self.sig)\n",
+    "        return self\n",
+    "\n",
+    "test.add_sig().add_sig()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stock Cleaning Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "\n",
+    "class StockClean:\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    def __init__(self, file):\n",
+    "        # don't load data just yet!\n",
+    "        self.file = file\n",
+    "        # prepare a private empty tuple to contain clean data\n",
+    "        self.__clean_data = []\n",
+    "\n",
+    "    def clean(self, outpath):\n",
+    "        # read in data and record only clean data\n",
+    "        new_data = []\n",
+    "        col_names = []\n",
+    "        with open(self.file, 'r') as infile:\n",
+    "            # read into DictReader\n",
+    "            reader = csv.DictReader(infile)\n",
+    "            for row in reader:\n",
+    "                # skip row if missing, otherwise append\n",
+    "                if \"\" in row.values():\n",
+    "                    continue\n",
+    "                new_data.append(row)\n",
+    "            # get column names at the end. Convoluted\n",
+    "            col_names =  list(row.keys())\n",
+    "\n",
+    "        # write out data\n",
+    "        with open(outpath, 'w', newline='') as outfile:\n",
+    "            writer = csv.DictWriter(outfile, fieldnames=col_names)\n",
+    "            writer.writeheader()\n",
+    "            writer.writerows(new_data)\n",
+    "        \n",
+    "        # record in attribute\n",
+    "        self.__clean_data = new_data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaner = StockClean(\"data/AMZN_err.csv\")\n",
+    "\n",
+    "# notice new name\n",
+    "cleaner.clean(\"data/AMZN_clean.csv\")"
    ]
   },
   {
