--- a/phase_1/week_6/oop_2/oop_2_notes.ipynb
+++ b/phase_1/week_6/oop_2/oop_2_notes.ipynb
@@ -325,10 +325,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "class Fellow:\n",
     "\t\"\"\"Class to describe a fellow\n",
     "\n",
@@ -345,7 +347,7 @@
     "\t\tself.track = track\n",
     "\t\tself.familiars = familiars\n",
     "\n",
-    "\tdef in_common(self, other_fellow):\n",
+    "\tdef in_common(self, other_fellow: 'Fellow'):\n",
     "\t\tnew_list = []\n",
     "\t\tfor person in self.familiars:\n",
     "\t\t\tif person in other_fellow.familiars:\n",
